--- a/package.xml
+++ b/package.xml
@@ -26,6 +26,8 @@
   <build_depend>rosbag</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>g2o</build_depend>
+  <build_depend>ndt_omp</build_depend>
   <build_depend>image_transport</build_depend>
 
   <run_depend>message_runtime</run_depend>
@@ -37,6 +39,8 @@
   <run_depend>std_msgs</run_depend>
   <run_depend>rosbag</run_depend>
   <run_depend>tf</run_depend>
+  <run_depend>g2o</run_depend>
+  <run_depend>ndt_omp</run_depend>
   <run_depend>image_transport</run_depend>
   <export>
     <!-- Other tools can request additional information be placed here -->
